--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "ts-jest": "^29.0.3"
     },
     "dependencies": {
-        "moment": "2.29.4"
+        "moment": "2.29.4",
+        "crypto-js": "^4.1.1"
     }
 }
